@@ -366,7 +366,7 @@
       <module id="ekiga" branch="gnome-2-14"/>
       <module id="eog" branch="gnome-2-18"/>
       <module id="epiphany" branch="gnome-2-18"/>
-      <module id="evince"/>
+      <module id="evince" branch="gnome-2-18"/>
       <module id="evolution" branch="gnome-2-18"/>
       <module id="evolution-data-server" branch="gnome-2-18"/>
       <module id="evolution-exchange" branch="gnome-2-18"/>
@@ -433,7 +433,7 @@
     </category>
     <category id="devtools">
       <_description>Development Tools.</_description>
-      <module id="devhelp"/>
+      <module id="devhelp" branch="gnome-2-18"/>
       <module id="glade3" branch="gnome-2-18"/>
     </category>
   </release>
