@@ -1,5 +1,10 @@
 2007-04-17  Claude Paroz  <claude@2xlibre.net>
 
+	* gnome-modules.xml.in:
+	* releases.xml.in: devhelp and evince branched for 2.18.
+
+2007-04-17  Claude Paroz  <claude@2xlibre.net>
+
 	* gnome-modules.xml.in: 
 	* releases.xml.in: gconf branched for 2.18.
 	brasero_0_6 branch also added to releases.xml.in.
